# aMELia

./: .gitignore  CMakeLists.txt  README.md  REPO_SNAPSHOT_NOTE.txt  mop.md  scrape_instructions.txt
amelia_qt6/: README.md
amelia_qt6/src/: embeddingclient.h  main.cpp  qdrantclient.h  sessionsummary.cpp  storagemanager.h  toolexecutor.h
assets/: resources.qrc
config/: config.example.json
docs/sample/: wrcp-networking-notes.md
packaging/: amelia_qt6.desktop
scripts/: check_ollama.sh
src/: appconfig.cpp  appconfig.h  appversion.h  bootstrapdialog.cpp  chatcontroller.cpp  chatcontroller.h  embeddingclient.cpp  llmclient.h  main.cpp  mainwindow.cpp  mainwindow.h  memorymanager.cpp  memorymanager.h  notificationcenter.cpp  notificationcenter.h  ollamaclient.cpp  ollamaclient.h  outlineplanner.cpp  policyengine.cpp  qdrantclient.cpp  ragindexer.cpp  ragindexer.h  searchbroker.cpp  sessionsummary.cpp  sessionsummary.h  storagemanager.cpp  storagemanager.h  toolexecutor.cpp
src/app/: main.cpp
src/backend/: chatcontroller.cpp  chatcontroller.h  ollamaclient.cpp  ollamaclient.h  outlineplanner.cpp  outlineplanner.h  policyengine.cpp  policyengine.h  toolexecutor.cpp
src/core/: appconfig.cpp  appconfig.h  appversion.h  memorymanager.cpp  memorymanager.h  sessionsummary.cpp  storagemanager.cpp  storagemanager.h  transcriptformatter.cpp  transcriptformatter.h
src/rag/: embeddingclient.cpp  embeddingclient.h  qdrantclient.cpp  ragindexer.cpp  ragindexer.h  searchbroker.cpp  searchbroker.h
src/ui/: bootstrapdialog.cpp  bootstrapdialog.h  mainwindow.cpp  mainwindow.h  notificationcenter.cpp  notificationcenter.h
